force-app/main/default/objects/CC_Gestor_Documental__c/CC_Gestor_Documental__c.object-meta.xml
<CustomObject>
    <label>Gestor Documental</label>
    <nameField>
        <displayFormat>GD-{00000000}</displayFormat>
        <label>Gestor Documental Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Gestores Documentales</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>