force-app/main/default/objects/CC_Gestor_Documental__c/fields/CC_Contacto_Cliente__c.field-meta.xml
<CustomField>
    <fullName>CC_Contacto_Cliente__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>¿Se ha contactado con el cliente?</inlineHelpText>
    <label>Contacto con el cliente</label>
    <type>Checkbox</type>
</CustomField>