force-app/main/default/objects/CC_Gestor_Documental__c/fields/CC_Contestar_Respuesta_Cliente__c.field-meta.xml
<CustomField>
    <fullName>CC_Contestar_Respuesta_Cliente__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Contestar la respuesta del cliente</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>