force-app/main/default/objects/CC_Gestor_Documental__c/fields/CC_Datos_RM__c.field-meta.xml
<CustomField>
    <fullName>CC_Datos_RM__c</fullName>
    <formula>IF(ISPICKVAL(CC_Idioma__c, &quot;ca&quot;), &quot;C.Pintor Sorolla, 2-4 46002-Valencia - NIF A08663619 - Inscrita en el Registre Mercantil de Valencia, volum 10370, foli 1, fulla número V-178351, inscripció 2ª&quot;,
IF(ISPICKVAL(CC_Idioma__c, &quot;es&quot;), &quot;C.Pintor Sorolla, 2-4 46002-Valencia - NIF A08663619 - Inscrita en el Registro Mercantil de Valencia, tomo 10370, folio 1, hoja número V-178351, inscripción 2ª&quot;,
IF(ISPICKVAL(CC_Idioma__c, &quot;en&quot;), &quot;C.Pintor Sorolla, 2-4 46002-Valencia - NIF A08663619 - Registered in the Mercantile Registry of Valencia, volume 10370, sheet of paper 1, page number V-178351, inscription 2ª&quot;,
&quot;C.Pintor Sorolla, 2-4 46002-Valencia - NIF A08663619 - Inscrita en el Registro Mercantil de Valencia, tomo 10370, folio 1, hoja número V-178351, inscripción 2ª&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Datos del RM</label>
    <type>Text</type>
</CustomField>