force-app/main/default/objects/CC_Gestor_Documental__c/fields/CC_Detalle_Informacion_Enviar__c.field-meta.xml
<CustomField>
    <fullName>CC_Detalle_Informacion_Enviar__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Detalle información a enviar</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>