force-app/main/default/objects/CC_Gestor_Documental__c/fields/CC_Documentacion_Adicional__c.field-meta.xml
<CustomField>
    <fullName>CC_Documentacion_Adicional__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Cuando adjuntamos documentación adicional al cuadro de amortización</inlineHelpText>
    <label>Documentación adicional</label>
    <type>Checkbox</type>
</CustomField>