force-app/main/default/objects/CC_Gestor_Documental__c/fields/CC_Documentacion_No_Localizada__c.field-meta.xml
<CustomField>
    <fullName>CC_Documentacion_No_Localizada__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Si la documentación que no se localiza es de un préstamo promotor</inlineHelpText>
    <label>Documentación no localizada (promotor)</label>
    <type>Checkbox</type>
</CustomField>