force-app/main/default/objects/CC_Gestor_Documental__c/fields/CC_Fecha_Final_Calculo__c.field-meta.xml
<CustomField>
    <fullName>CC_Fecha_Final_Calculo__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Fecha final del cálculo</label>
    <type>Date</type>
</CustomField>