force-app/main/default/objects/CC_Gestor_Documental__c/fields/CC_Fraude__c.field-meta.xml
<CustomField>
    <fullName>CC_Fraude__c</fullName>
    <label>Fraude</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NO PHISHING</fullName>
                <default>true</default>
                <label>NO PHISHING</label>
            </value>
            <value>
                <fullName>CARTAS NIGERIANAS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>