force-app/main/default/objects/CC_Gestor_Documental__c/fields/CC_Idioma__c.field-meta.xml
<CustomField>
    <fullName>CC_Idioma__c</fullName>
    <label>Idioma</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ca</fullName>
                <label>Català</label>
            </value>
            <value>
                <fullName>es</fullName>
                <default>true</default>
                <label>Castellano</label>
            </value>
            <value>
                <fullName>en</fullName>
                <label>Inglés</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>