force-app/main/default/objects/CC_Gestor_Documental__c/fields/CC_Imagen_Cabecera__c.field-meta.xml
<CustomField>
    <fullName>CC_Imagen_Cabecera__c</fullName>
    <formula>IMAGE(&quot;/resource/CC_PDF_Cabecera&quot;,&apos;LogoCaixa&apos;,75,300)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Imagen Cabecera</label>
    <type>Text</type>
</CustomField>