force-app/main/default/objects/CC_Gestor_Documental__c/fields/CC_Imagen_Firma__c.field-meta.xml
<CustomField>
    <fullName>CC_Imagen_Firma__c</fullName>
    <formula>IMAGE(&quot;/resource/CC_Firma&quot;,&apos;Firma&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Imagen de la firma</label>
    <type>Text</type>
</CustomField>