force-app/main/default/objects/CC_Gestor_Documental__c/fields/CC_Informacion_Condiciones_Financiacion__c.field-meta.xml
<CustomField>
    <fullName>CC_Informacion_Condiciones_Financiacion__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Si solicita información sobre las condiciones de financiación</inlineHelpText>
    <label>Información de la financiación</label>
    <type>Checkbox</type>
</CustomField>