force-app/main/default/objects/CC_Gestor_Documental__c/fields/CC_Informacion_Documentacion_Adicional__c.field-meta.xml
<CustomField>
    <fullName>CC_Informacion_Documentacion_Adicional__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Información a rellenar por el operador cuándo adjuntamos documentación adicional</inlineHelpText>
    <label>Información documentación adicional</label>
    <type>TextArea</type>
</CustomField>