force-app/main/default/objects/CC_Gestor_Documental__c/fields/CC_Movimiento_En_Cuenta__c.field-meta.xml
<CustomField>
    <fullName>CC_Movimiento_En_Cuenta__c</fullName>
    <label>Información sobre movimiento en cuenta</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Recibo</fullName>
                <default>true</default>
                <label>Recibo</label>
            </value>
            <value>
                <fullName>Comision</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>