force-app/main/default/objects/CC_Gestor_Documental__c/fields/CC_NoContestar__c.field-meta.xml
<CustomField>
    <fullName>CC_NoContestar__c</fullName>
    <formula>IF(ISPICKVAL(CC_Idioma__c, &quot;ca&quot;),
&quot;Si us plau, no responguis aquest correu. Has estat enviat des d&apos;una bústia d&apos;emissió que no permet resposta.&quot;,

IF(ISPICKVAL(CC_Idioma__c, &quot;es&quot;),
&quot;Por favor, no contestes este correo. Ha sido enviado desde un buzón de emisión que no permite respuesta.&quot;,

IF(ISPICKVAL(CC_Idioma__c, &quot;en&quot;),
&quot;Please does not reply this mail. It has been sent from a no-reply email address.&quot;,

&quot;Por favor, no contestes este correo. Ha sido enviado desde un buzón de emisión que no permite respuesta.&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No contestar</label>
    <type>Text</type>
</CustomField>