force-app/main/default/objects/CC_Gestor_Documental__c/fields/CC_Parte_Documentacion__c.field-meta.xml
<CustomField>
    <fullName>CC_Parte_Documentacion__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Si parte de la documentación la está gestionando la oficina para entregarla al cliente</inlineHelpText>
    <label>Parte de documentación</label>
    <type>Checkbox</type>
</CustomField>