force-app/main/default/objects/CC_Gestor_Documental__c/fields/CC_Prestamo_Titulizado__c.field-meta.xml
<CustomField>
    <fullName>CC_Prestamo_Titulizado__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Si el préstamo no está titulizado</inlineHelpText>
    <label>Préstamo titulizado</label>
    <type>Checkbox</type>
</CustomField>