force-app/main/default/objects/CC_Gestor_Documental__c/fields/CC_Prestamo_Vendido_Tercero__c.field-meta.xml
<CustomField>
    <fullName>CC_Prestamo_Vendido_Tercero__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Si el préstamo se ha vendido a un tercero</inlineHelpText>
    <label>Préstamo vendido a un tercero</label>
    <type>Checkbox</type>
</CustomField>