force-app/main/default/objects/CC_Gestor_Documental__c/fields/CC_Queja_Limpieza__c.field-meta.xml
<CustomField>
    <fullName>CC_Queja_Limpieza__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Si el cliente se queja de la limpieza del recinto</inlineHelpText>
    <label>Queja limpieza</label>
    <type>Checkbox</type>
</CustomField>