force-app/main/default/objects/CC_Gestor_Documental__c/fields/CC_Sexo__c.field-meta.xml
<CustomField>
    <fullName>CC_Sexo__c</fullName>
    <label>Sexo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hombre</fullName>
                <default>true</default>
                <label>Hombre</label>
            </value>
            <value>
                <fullName>Mujer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>