force-app/main/default/objects/CC_Gestor_Documental__c/fields/CC_Solicitud__c.field-meta.xml
<CustomField>
    <fullName>CC_Solicitud__c</fullName>
    <label>Solicitud</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SOLICITUD DOCUMENTACION</fullName>
                <default>true</default>
                <label>SOLICITUD DOCUMENTACIÓN</label>
            </value>
            <value>
                <fullName>SOLICITUD DOCUMENTACION NO TITULAR</fullName>
                <label>SOLICITUD DOCUMENTACIÓN NO TITULAR</label>
            </value>
            <value>
                <fullName>SOLICITUD DOCUMENTACION PRESTAMO HIPOTECARIO</fullName>
                <label>SOLICITUD DOCUMENTACIÓN PRÉSTAMO HIPOTECARIO</label>
            </value>
            <value>
                <fullName>SOLICITUD DOCUMENTACION TARJETA</fullName>
                <label>SOLICITUD DOCUMENTACIÓN TARJETA</label>
            </value>
            <value>
                <fullName>SOLICITUD DOCUMENTACION AHORRO A LA VISTA</fullName>
                <label>SOLICITUD DOCUMENTACIÓN AHORRO A LA VISTA</label>
            </value>
            <value>
                <fullName>SOLICITUD DOCUMENTACION CAIXABANK CONSUMER</fullName>
                <label>SOLICITUD DOCUMENTACIÓN CAIXABANK CONSUMER</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>