force-app/main/default/objects/CC_Gestor_Documental__c/fields/CC_Solicitud_Cancelacion_Contratos__c.field-meta.xml
<CustomField>
    <fullName>CC_Solicitud_Cancelacion_Contratos__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>el cliente menciona que quiere cancelar sus contratos</inlineHelpText>
    <label>Solicitud cancelación contratos</label>
    <type>Checkbox</type>
</CustomField>