force-app/main/default/objects/CC_Gestor_Documental__c/fields/CC_Solicitud_Cancelacion_Seguro__c.field-meta.xml
<CustomField>
    <fullName>CC_Solicitud_Cancelacion_Seguro__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Con o sin confirmación oficina</inlineHelpText>
    <label>Solicitud Cancelacion Seguros</label>
    <type>Checkbox</type>
</CustomField>