force-app/main/default/objects/CC_Gestor_Documental__c/fields/CC_Solicitud_Info_Prestamo__c.field-meta.xml
<CustomField>
    <fullName>CC_Solicitud_Info_Prestamo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Solicita info para pedir un prestamo</label>
    <type>Checkbox</type>
</CustomField>