force-app/main/default/objects/CC_Gestor_Documental__c/fields/CC_Solicitud_Informacion_Requisitos__c.field-meta.xml
<CustomField>
    <fullName>CC_Solicitud_Informacion_Requisitos__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Si solicita información sobre los requisitos que debe cumplir</inlineHelpText>
    <label>Información de requisitos a cumplir</label>
    <type>Checkbox</type>
</CustomField>