force-app/main/default/objects/CC_Gestor_Documental__c/fields/CC_Tono_Irrespetuoso__c.field-meta.xml
<CustomField>
    <fullName>CC_Tono_Irrespetuoso__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Cuando el tono de la carta al cliente sea irónico, irrespectuoso, etc.</inlineHelpText>
    <label>Tono Irrespetuoso</label>
    <type>Checkbox</type>
</CustomField>