force-app/main/default/objects/CC_Gestor_Documental__c/fields/CC_Usuario_Now__c.field-meta.xml
<CustomField>
    <fullName>CC_Usuario_Now__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Marcar en caso que sea un usuario de Now</inlineHelpText>
    <label>Usuario de Now</label>
    <type>Checkbox</type>
</CustomField>